# gm-llm-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
data/questions/: c1_clause_attribution.json  c2_standard_mapping.json  c3_skod_scoring.json  c4_nonconformity.json  c5_code_rewriting.json  c6_tool_use.json
data/schemas/: c1.schema.json  c2.schema.json  c3.schema.json  c4.schema.json  c5.schema.json  c6.schema.json
docs/: _config.yml  api.html  config.html  guide.html  index.html  leaderboard.html
docs/assets/: style.css
harness/: run_eval.py
harness/evaluators/: c1_c2_evaluator.py  c3_evaluator.py  c4_evaluator.py  c5_evaluator.py  c6_evaluator.py
harness/providers/: anthropic_provider.py  base.py  deepseek_provider.py  openai_provider.py
leaderboard/: index.html
scripts/: run_all_models.sh  update_leaderboard.py  validate_questions.py
