[project]
name = "gm-llm-bench"
version = "0.1.0"
description = "The first benchmark for evaluating LLMs on China's commercial cryptography compliance (密评)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "jsonschema>=4.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
gm-bench = "harness.run_eval:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
